samples/_failures_safe/1761147016_861afc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72d6e660.c: In function ‘main’:
./samples/SAFE/__tmp_72d6e660.c:158:17: error: expected expression at end of input
  158 |                 } else
      |                 ^
./samples/SAFE/__tmp_72d6e660.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72d6e660.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72d6e660.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72d6e660.c:158:17: error: expected declaration or statement at end of input
